# llm2voice

./: .gitignore  README.md  audio.py  hello.py  input_handler.py  llm.py  log.py  pyproject.toml  test1.py
tts_module/: engine.py  mpv_player.py  sentence_processor.py  sentences.py  tts.py
tts_module/engine/: base_engine.py  edge_engine.py  openai_engine.py
tts_module/player/: mpv_player.py  py_player.py
