[project]
name = "llm2voice"
version = "0.1.0"
description = "Make Worlds Better"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts",
    "openai>=1.57.2",
    "pydantic>=2.10.3",
    "pyyaml>=6.0.2",
    "sounddevice>=0.5.1",
    "xinference>=1.0.1",
]

[tool.uv.sources]
edge-tts = { git = "https://github.com/rany2/edge-tts.git" }
